# mysite

./: db.sqlite3  pyproject.toml
mysite/: settings.py
render/templates/render/: index.html
