[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Jan du Plessis <drjanduplessis@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
